# idloc

./: README.md  idloc.py  locid.py  pyproject.toml  test_idloc.py  test_locid.py
examples/: sh2002000569.json  sh85021262.json
