[project]
name = "idloc"
version = "0.1.5"
description = "Find and get readable JSON-LD from Library of Congress Linked Data Service"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "pyld>=2.0.4",
    "requests>=2.32.3",
]

[project.scripts]
idloc = "idloc:cli"

[project.urls]
homepage = "https://github.com/edsu/idloc"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py"
]
